--- a/firebase.json
+++ b/firebase.json
@@ -9,5 +9,18 @@
       "**/.*",
       "**/node_modules/**"
     ]
+  },
+  "emulators": {
+    "database": {
+      "port": 9000
+    },
+    "hosting": {
+      "port": 5000
+    },
+    "ui": {
+      "enabled": true,
+      "port": 8080
+    },
+    "singleProjectMode": true
   }
 }
